@@ -23,6 +23,8 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.datatype.jsr310.JavaTimeModule;
 
 import feign.FeignException;
+
+import org.apache.commons.lang3.StringUtils;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 
@@ -82,7 +84,7 @@ public class GlobalExceptionHandler extends ResponseEntityExceptionHandler {
 		log.debug("Message: {}", exception.getMessage());
 		ErrorResponse errorResponse;
 		log.debug("UTF-8 Message: {}", exception.contentUTF8());
-		if (exception.contentUTF8().isBlank()) {
+		if (StringUtils.isBlank(exception.contentUTF8())) {
 			errorResponse = new ErrorResponse("Invalid Request");
 		} else {
 			try {
